No issue. Fixed menu becoming invisible (black on black) when window sizes is reduced.

--- a/_sass/_02_settings_colors.scss
+++ b/_sass/_02_settings_colors.scss
@@ -97,8 +97,8 @@ $topbar-dropdown-link-bg: $ci-2;
 
 $topbar-menu-link-color-toggled: $ci-1;
 $topbar-menu-icon-color-toggled: $ci-1;
-$topbar-menu-link-color: #000;
-$topbar-menu-icon-color: #000;
+$topbar-menu-link-color: #fff;
+$topbar-menu-icon-color: #fff;
 $topbar-menu-link-color-toggled: $ci-1;
 $topbar-menu-icon-color-toggled: $ci-1;
 
